--- a/app/views/factory/buy/carts/list.html.erb
+++ b/app/views/factory/buy/carts/list.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: 'index_table', locals: { cache_key: Org::Member.column_names.hash } do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @members, as: :model %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @carts, as: :model %>
 <% end %>
 
-<%= paginate @members %>
+<%= paginate @carts %>
