--- a/app/views/factory/buy/carts/_list/_index_thead.html.erb
+++ b/app/views/factory/buy/carts/_list/_index_thead.html.erb
@@ -4,5 +4,5 @@
 </th>
 <th><%= Org::MemberDepartment.human_attribute_name(:department_id) %></th>
 <th>
-  <p><%= Org::Member.human_attribute_name(:enabled) %></p>
+  <%= render partial: 'production', locals: { model: @production } if @production %>
 </th>
