--- a/app/views/factory/buy/carts/_list/_production.html.erb
+++ b/app/views/factory/buy/carts/_list/_production.html.erb
@@ -1,6 +1,6 @@
-<div class="weui-media-box weui-media-box_appmsg">
+<div>
   <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, text: true, class: 'weui-media-box__hd') do %>
-    <%= image_tag model.product.logo, class: 'weui-media-box__thumb' if model.product.logo.attached? %>
+    <%= image_tag model.product.logo, class: 'image is-32x32' if model.product.logo.attached? %>
   <% end %>
   <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, text: true, class: 'weui-media-box__bd is-flex is-flex-direction-column') do %>
     <h4 class="weui-media-box__title"><%= model.name %></h4>
