--- a/app/views/factory/buy/carts/_list/_index_tbody.html.erb
+++ b/app/views/factory/buy/carts/_list/_index_tbody.html.erb
@@ -14,8 +14,5 @@
 <% end %>
 </td>
 <td>
-  <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
-    <%= f.check_box :enabled, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
-    <label data-action="click->input#check"></label>
-  <% end %>
+  <%= render partial: 'cart', locals: { model: @production, trade_item: model.trade_items.find(&->(i){ i.good_type == model.class_name && i.good_id == model.id && i.produce_plan_id.to_s == params[:produce_plan_id].to_s }) } %>
 </td>
