--- a/app/views/factory/buy/carts/_list/_index_thead.html.erb
+++ b/app/views/factory/buy/carts/_list/_index_thead.html.erb
@@ -4,5 +4,5 @@
 </th>
 <th><%= Org::MemberDepartment.human_attribute_name(:department_id) %></th>
 <th>
-  <%= render partial: 'production', locals: { model: @production } if @production %>
+  <%= render partial: 'production', locals: { model: @production } %>
 </th>
