--- a/app/views/factory/buy/carts/_list/_cart.html.erb
+++ b/app/views/factory/buy/carts/_list/_cart.html.erb
@@ -7,7 +7,7 @@
 <%= form_with(theme: nil, scope: 'trade_item', url: { controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input' }) do |f| %>
   <%= f.number_field :number, value: trade_item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
 <% end if trade_item %>
-<%= button_to({ controller: 'trade/my/carts', action: 'add' }, params: { good_type: model.class_name, good_id: model.id, **params.permit(:produce_plan_id) }, class: 'ml-1') do %>
+<%= button_to({ controller: 'factory/buy/carts', action: 'add', id: cart.id }, params: { good_type: model.class_name, good_id: model.id, produce_plan_id: params[:produce_plan_id] }, class: 'ml-1') do %>
   <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
 <% end unless trade_item %>
 <%= button_to({ controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number + 1 }, class: 'ml-1') do %>
