--- a/app/views/factory/buy/carts/_list/_index_tbody.html.erb
+++ b/app/views/factory/buy/carts/_list/_index_tbody.html.erb
@@ -7,12 +7,17 @@
 </td>
 <td>
 <% model.trade_items.each do |trade_item| %>
-  <p>
+  <div>
+    <%= form_with theme: nil, model: trade_item, url: { controller: 'trade_items', action: 'toggle', id: trade_item.id }, data: { controller: 'input' }, class: 'is-inline' do |f| %>
+      <%= f.check_box :status, value: trade_item.checked? ? 'checked' : 'init', checked: trade_item.checked?, data: { action: 'click->input#form' }, id: nil %>
+    <% end %>
     <span><%= trade_item.good_name %></span>
     <span><%= trade_item.single_price.to_money.format(html_wrap: true).html_safe %></span>
-  </p>
+    <span><%= trade_item.amount.to_money.format(html_wrap: true).html_safe %></span>
+  </div>
 <% end %>
 </td>
+<td><%= model.amount.to_money.format(html_wrap: true).html_safe %></td>
 <td>
   <%= render partial: 'cart', locals: { model: @production, cart: model, trade_item: model.trade_items.find(&->(i){ i.good_type == @production.class_name && i.good_id == @production.id && i.produce_plan_id.to_s == params[:produce_plan_id].to_s }) } %>
 </td>
