--- a/app/views/factory/buy/carts/_list/_index_thead.html.erb
+++ b/app/views/factory/buy/carts/_list/_index_thead.html.erb
@@ -2,7 +2,8 @@
   <p><%= Org::Member.human_attribute_name(:name) %></p>
   <p class="has-text-grey"><%= Org::Member.human_attribute_name(:identity) %></p>
 </th>
-<th><%= Org::MemberDepartment.human_attribute_name(:department_id) %></th>
+<th><%= Trade::TradeItem.human_attribute_name(:single_price) %></th>
+<th><%= Trade::TradeItem.human_attribute_name(:amount) %></th>
 <th>
   <%= render partial: 'production', locals: { model: @production } %>
 </th>
