--- a/app/views/factory/buy/carts/_list/_production.html.erb
+++ b/app/views/factory/buy/carts/_list/_production.html.erb
@@ -1,27 +1,31 @@
-<div>
-  <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, text: true, class: 'weui-media-box__hd') do %>
-    <%= image_tag model.product.logo, class: 'image is-32x32' if model.product.logo.attached? %>
-  <% end %>
-  <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, text: true, class: 'weui-media-box__bd is-flex is-flex-direction-column') do %>
-    <h4 class="weui-media-box__title"><%= model.name %></h4>
-    <p class="weui-media-box__desc pt-0">
-      <%= model.product.description %>
-    </p>
-    <ul class="weui-media-box__info is-flex-wrap-wrap mt-0">
-      <% model.parts.group_by(&->(i){ i.part_taxon_id }).each do |_, parts| %>
-        <% parts.each_with_index do |part, index| %>
-          <li class="weui-media-box__info__meta<%= index > 0 ? ' weui-media-box__info__meta_extra' : '' %>"><%= part.name %></li>
+<div class="media">
+  <div class="media-left">
+    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, text: true) do %>
+      <%= image_tag model.product.logo, class: 'image is-64x64' if model.product.logo.attached? %>
+    <% end %>
+  </div>
+  <div class="media-content">
+    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, text: true, class: 'weui-media-box__bd is-flex is-flex-direction-column') do %>
+      <h4 class="weui-media-box__title"><%= model.name %></h4>
+      <p class="weui-media-box__desc pt-0">
+        <%= model.product.description %>
+      </p>
+      <ul class="weui-media-box__info is-flex-wrap-wrap mt-0">
+        <% model.parts.group_by(&->(i){ i.part_taxon_id }).each do |_, parts| %>
+          <% parts.each_with_index do |part, index| %>
+            <li class="weui-media-box__info__meta<%= index > 0 ? ' weui-media-box__info__meta_extra' : '' %>"><%= part.name %></li>
+          <% end %>
         <% end %>
-      <% end %>
-    </ul>
-    <div>
-      <span class="has-text-danger"><%= model.price.to_money.format(html_wrap: true).html_safe %></span>
-      <% if current_cart.card %>
-      <div class="tags has-addons control m-0" style="display: inline-flex">
-        <div class="tag is-success"><%= current_cart.card.card_template.code %></div>
-        <div class="tag is-light"><%= model.vip_price.fetch(current_cart.card.card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
+      </ul>
+      <div>
+        <span class="has-text-danger"><%= model.price.to_money.format(html_wrap: true).html_safe %></span>
+        <% if current_cart.card %>
+        <div class="tags has-addons control m-0" style="display: inline-flex">
+          <div class="tag is-success"><%= current_cart.card.card_template.code %></div>
+          <div class="tag is-light"><%= model.vip_price.fetch(current_cart.card.card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
+        </div>
+        <% end %>
       </div>
-      <% end %>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
