--- a/app/views/factory/buy/carts/_list/_index_table.html.erb
+++ b/app/views/factory/buy/carts/_list/_index_table.html.erb
@@ -24,7 +24,8 @@
     <tr>
       <th colspan="4"></th>
       <th>
-        <%= button_to({}, class: 'button is-success') do %>
+        <%= button_to({ controller: 'orders', action: 'create' }, class: 'button is-success') do %>
+          <i class="fa-light fa-credit-card"></i><%= t('.pay') %>
         <% end %>
       </th>
     </tr>
