--- a/app/views/factory/buy/trade_items/_index/_index_tfoot.html.erb
+++ b/app/views/factory/buy/trade_items/_index/_index_tfoot.html.erb
@@ -1,4 +1,6 @@
-<th colspan="4"></th>
+<th colspan="3"></th>
+<th><%= @trade_items.sum(&:amount) %></th>
+<th colspan="3"></th>
 <th>
   <%= button_to({ controller: 'orders', action: 'create' }, class: 'button is-success') do %>
     <i class="fa-light fa-credit-card"></i><%= t('.pay') %>
