--- a/app/views/factory/buy/trade_items/_index/_index_tfoot.html.erb
+++ b/app/views/factory/buy/trade_items/_index/_index_tfoot.html.erb
@@ -1,8 +1,8 @@
 <th colspan="3"></th>
 <th><%= @trade_items.sum(&:amount) %></th>
 <th colspan="3"></th>
-<th>
-  <%= button_to({ controller: 'orders', action: 'create' }, class: 'button is-success') do %>
+<th id="payment_button">
+  <%= button_to({ controller: 'payments', action: 'create', organ_id: params[:organ_id] }, class: 'button is-success') do %>
     <i class="fa-light fa-credit-card"></i><%= t('.pay') %>
   <% end %>
 </th>
