--- a/app/views/factory/admin/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html.erb
@@ -4,7 +4,7 @@
     <span><%= model.name %></span>
   </div>
 </td>
-<td>
+<td class="has-inner-table">
   <table class="table is-fullwidth is-borderless">
     <% model.parts.each do |part| %>
       <tr>
