--- a/app/views/factory/productions/_production.html.erb
+++ b/app/views/factory/productions/_production.html.erb
@@ -22,12 +22,12 @@
         <div class="tag is-light"><%= model.vip_price.fetch(current_cart.card.card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
       </div>
       <% else %>
-      <div class="tags has-addons control m-0" style="display: inline-flex">
       <% @card_templates.each do |card_template| %>
+      <div class="tags has-addons is-price control m-0" style="display: inline-flex">
         <div class="tag is-success"><%= card_template.code %></div>
         <div class="tag is-light"><%= model.vip_price.fetch(card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
-      <% end %>
       </div>
+      <% end %>
       <% end %>
     </div>
   <% end %>
