--- a/app/views/factory/productions/_production.html.erb
+++ b/app/views/factory/productions/_production.html.erb
@@ -16,18 +16,15 @@
     </ul>
     <div>
       <span class="has-text-danger"><%= model.price.to_money.format(html_wrap: true).html_safe %></span>
-      <% if current_cart&.card %>
-      <div class="tags has-addons control m-0" style="display: inline-flex">
-        <div class="tag is-success"><%= current_cart.card.card_template.code %></div>
-        <div class="tag is-light"><%= model.vip_price.fetch(current_cart.card.card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
-      </div>
-      <% else %>
       <% @card_templates.each do |card_template| %>
       <div class="tags has-addons is-price control m-0" style="display: inline-flex">
-        <div class="tag is-success"><%= card_template.code %></div>
+        <% if current_cart&.card && current_cart.card.card_template.code == card_template.code %>
+          <div class="tag is-danger"><%= card_template.code %></div>
+        <% else %>
+          <div class="tag is-success"><%= card_template.code %></div>
+        <% end %>
         <div class="tag is-light"><%= model.vip_price.fetch(card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
       </div>
-      <% end %>
       <% end %>
     </div>
   <% end %>
