--- a/app/views/factory/panel/factory_taxons/_show_table.html.erb
+++ b/app/views/factory/panel/factory_taxons/_show_table.html.erb
@@ -1,4 +1,4 @@
 <tr>
-  <td class="has-text-right"><%= FactoryTaxon.human_attribute_name(:name) %></td>
+  <td class="has-text-right"><%= Factory::FactoryTaxon.human_attribute_name(:name) %></td>
   <td><%= @factory_taxon.name %></td>
 </tr>
