--- a/app/views/factory/panel/providers/_new_form.html.erb
+++ b/app/views/factory/panel/providers/_new_form.html.erb
@@ -1,5 +1,5 @@
 <div class="panel" data-controller="typer">
-  <%= form_with theme: nil, scope: nil, method: :get, url: { action: 'search' } do |f| %>
+  <%= form_with theme: nil, scope: nil, url: { action: 'search' } do |f| %>
     <div class="control has-icons-left">
       <%= f.search_field 'name-like', class: 'input', placeholder: '搜索', data: { typer_target: 'input' } %>
       <span class="icon is-left"><i class="fa-light fa-search"></i></span>
