--- a/app/views/factory/admin/produce_plans/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_index/_index_tbody.html.erb
@@ -1,3 +1,3 @@
 <td><%= model.produce_on %></td>
-<td><time data-controller="time"><%= model.created_at.to_s(:iso8601) %></time></td>
+<td><time data-controller="time"><%= model.created_at.to_formatted_s(:iso8601) %></time></td>
 <td><%= model.state %></td>
