--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -3,8 +3,8 @@
   <%= f.hidden_field :product_plan_id, value: params[:product_plan_id] %>
 <% end %>
 
-<div class="slide" data-controller="slide" data-slide-duration="1s">
-  <% @product.covers.each_with_index do |cover, index| %>
+<div class="slide" data-controller="slide" data-slide-debug-value="true" data-slide-duration="1s">
+  <% @production.product.covers.each_with_index do |cover, index| %>
     <%= render partial: 'figure', locals: { cover: cover, index: index } %>
   <% end %>
 </div>
