--- a/app/views/factory/buy/carts/_list/_filter_table.html.erb
+++ b/app/views/factory/buy/carts/_list/_filter_table.html.erb
@@ -1,3 +1,4 @@
+<% if @produce_plan %>
 <table class="as-search">
   <tr>
     <th>日期</th>
@@ -29,3 +30,4 @@
     </td>
   </tr>
 </table>
+<% end %>
