add direct to trade item

--- a/app/views/factory/buy/carts/_list/_index_thead.html.erb
+++ b/app/views/factory/buy/carts/_list/_index_thead.html.erb
@@ -5,5 +5,5 @@
 <th><%= Trade::TradeItem.human_attribute_name(:single_price) %></th>
 <th><%= Trade::TradeItem.human_attribute_name(:amount) %></th>
 <th>
-  <%= render partial: 'production', locals: { model: @production } %>
+  <%= render partial: 'production', locals: { model: @production } if @production %>
 </th>
