--- a/app/views/factory/buy/carts/_list/_cart.html.erb
+++ b/app/views/factory/buy/carts/_list/_cart.html.erb
@@ -15,8 +15,14 @@
     <% end if trade_item %>
   </div>
   <div class="control">
-    <%= button_to({ controller: 'carts', action: 'add', id: cart.id }, params: { good_type: model.class_name, good_id: model.id, produce_plan_id: params[:produce_plan_id] }, class: 'ml-1') do %>
-      <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
+    <%= form_with theme: nil, url: { controller: 'trade/my/trade_items', action: 'create' }, class: 'ml-1 button_to' do |f| %>
+      <%= f.hidden_field :member_id, value: member.id %>
+      <%= f.hidden_field :good_type, value: model.class_name %>
+      <%= f.hidden_field :good_id, value: model.id %>
+      <%= f.hidden_field :produce_plan_id, value: params[:produce_plan_id] %>
+      <%= button_tag do %>
+        <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
+      <% end %>
     <% end unless trade_item %>
   </div>
   <div class="control">
