--- a/app/views/factory/buy/carts/_list/_index_tbody.html.erb
+++ b/app/views/factory/buy/carts/_list/_index_tbody.html.erb
@@ -1,12 +1,12 @@
 <td>
   <div class="is-several">
-    <%= image_tag model.member.avatar.variant(resize_to_limit: [35, 35]), class: 'image is-24x24' if model.member.avatar.attached? %>
-    <%= link_to model.member.name, { action: 'show', id: model } %>
+    <%= image_tag model.avatar.variant(resize_to_limit: [35, 35]), class: 'image is-24x24' if model.avatar.attached? %>
+    <%= link_to model.name, { action: 'show', id: model } %>
   </div>
-  <p class="has-text-grey"><%= model.member.identity %></p>
+  <p class="has-text-grey"><%= model.identity %></p>
 </td>
 <td>
-<% model.trade_items.each do |trade_item| %>
+<% model.cart_trade_items.each do |trade_item| %>
   <div>
     <%= form_with theme: nil, model: trade_item, url: { controller: 'trade_items', action: 'toggle', id: trade_item.id }, data: { controller: 'input' }, class: 'is-inline' do |f| %>
       <%= f.check_box :status, value: trade_item.checked? ? 'checked' : 'init', checked: trade_item.checked?, data: { action: 'click->input#form' }, id: nil %>
@@ -18,7 +18,7 @@
   </div>
 <% end %>
 </td>
-<td><%= model.amount.to_money.format(html_wrap: true).html_safe %></td>
+<td><%# model.amount.to_money.format(html_wrap: true).html_safe %></td>
 <td>
-  <%= render partial: 'cart', locals: { model: @production, cart: model, trade_item: model.trade_items.find(&->(i){ i.good_type == @production.class_name && i.good_id == @production.id && i.produce_plan_id.to_s == params[:produce_plan_id].to_s }) } if @production %>
+  <%= render partial: 'cart', locals: { model: @production, member: model, trade_item: model.trade_items.find(&->(i){ i.good_type == @production.class_name && i.good_id == @production.id && i.produce_plan_id.to_s == params[:produce_plan_id].to_s }) } if @production %>
 </td>
