--- a/app/views/factory/buy/home/index.html.erb
+++ b/app/views/factory/buy/home/index.html.erb
@@ -2,5 +2,5 @@
   <%= link_to({ controller: 'productions' }, class: 'column is-half has-background-info-dark py-6 has-text-centered') do %>
     <i class="fa-solid fa-turkey has-text-light"></i>
     <p class="has-text-light">开始点餐</p>
-  <% end %>>
+  <% end %>
 </div>
