--- a/app/views/factory/buy/productions/_index/_cart.html.erb
+++ b/app/views/factory/buy/productions/_index/_cart.html.erb
@@ -1,11 +1,11 @@
 <% trade_item = current_member.trade_items.find(&->(i){ i.good_type == model.class_name && i.good_id == model.id && i.produce_plan_id.to_s == params[:produce_plan_id].to_s }) %>
-<%= button_to({ controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number - 1 }, class: 'mr-1') do %>
+<%= button_to({ controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number - 1 }, class: 'mr-1') do %>
   <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
 <% end if trade_item && trade_item.number > 1 %>
-<%= button_to({ controller: 'trade/my/trade_items', action: 'destroy', id: trade_item.id }, method: :delete, class: 'mr-1') do %>
+<%= button_to({ controller: 'trade/me/trade_items', action: 'destroy', id: trade_item.id }, method: :delete, class: 'mr-1') do %>
   <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
 <% end if trade_item && trade_item.number <= 1 %>
-<%= form_with(theme: nil, scope: 'trade_item', url: { controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input' }) do |f| %>
+<%= form_with(theme: nil, scope: 'trade_item', url: { controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input' }) do |f| %>
   <%= f.number_field :number, value: trade_item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
 <% end if trade_item %>
 <%= form_with theme: nil, url: { controller: 'trade/me/trade_items', action: 'create' }, class: 'ml-1 button_to' do |f| %>
@@ -16,6 +16,6 @@
     <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
   <% end %>
 <% end unless trade_item %>
-<%= button_to({ controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number + 1 }, class: 'ml-1') do %>
+<%= button_to({ controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number + 1 }, class: 'ml-1') do %>
   <i class="fa-solid fa-circle-plus fa-xl has-text-dark-grey"></i>
 <% end if trade_item %>
