--- a/app/views/factory/buy/productions/_index/_cart.html.erb
+++ b/app/views/factory/buy/productions/_index/_cart.html.erb
@@ -1,6 +1,11 @@
-<% trade_item = current_member.trade_items.find(&->(i){ i.good_type == model.class_name && i.good_id == model.id && i.produce_plan_id.to_s == params[:produce_plan_id].to_s }) %>
-<%= button_to({ controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number - 1 }, class: 'mr-1') do %>
-  <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
+<% trade_item = current_user.trade_items.find(&->(i){ i.good_type == model.class_name && i.good_id == model.id && i.produce_plan_id.to_s == params[:produce_plan_id].to_s }) %>
+<%= form_with theme: nil, url: { controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
+  <%= f.hidden_field :organ_id, value: model.organ_id %>
+  <%= f.hidden_field :member_id, value: trade_item.member_id %>
+  <%= f.hidden_field '[trade_item]number', value: trade_item.number - 1 %>
+  <%= button_tag do %>
+    <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
+  <% end %>
 <% end if trade_item && trade_item.number > 1 %>
 <%= button_to({ controller: 'trade/me/trade_items', action: 'destroy', id: trade_item.id }, method: :delete, class: 'mr-1') do %>
   <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
@@ -16,6 +21,11 @@
     <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
   <% end %>
 <% end unless trade_item %>
-<%= button_to({ controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number + 1 }, class: 'ml-1') do %>
-  <i class="fa-solid fa-circle-plus fa-xl has-text-dark-grey"></i>
+<%= form_with theme: nil, url: { controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
+  <%= f.hidden_field :organ_id, value: model.organ_id %>
+  <%= f.hidden_field :member_id, value: trade_item.member_id %>
+  <%= f.hidden_field '[trade_item]number', value: trade_item.number + 1 %>
+  <%= button_tag do %>
+    <i class="fa-solid fa-circle-plus fa-xl has-text-dark-grey"></i>
+  <% end %>
 <% end if trade_item %>
