--- a/app/views/factory/productions/index.turbo_stream.erb
+++ b/app/views/factory/productions/index.turbo_stream.erb
@@ -1,5 +1,9 @@
 <%= turbo_stream.replace 'container' do %>
-  <%= render partial: 'product', collection: @products, as: :model %>
+  <%= render partial: 'production', collection: @productions, as: :model %>
   <%= render 'loading' %>
 <% end %>
-<%= turbo_stream.replace 'tip', partial: 'no_more' if @products.total_pages == @products.current_page %>
+<% if @productions.total_pages == @productions.current_page %>
+  <%= turbo_stream.replace 'tip', partial: 'no_more' %>
+<% else %>
+  <%= turbo_stream.replace 'tip', partial: 'tip' %>
+<% end %>
