--- a/app/views/factory/buy/home/index.html.erb
+++ b/app/views/factory/buy/home/index.html.erb
@@ -1,6 +1,13 @@
-<div class="columns is-flex">
-  <%= link_to({ controller: 'productions' }, class: 'column is-half has-background-info-dark py-6 has-text-centered') do %>
-    <i class="fa-solid fa-turkey has-text-light"></i>
-    <p class="has-text-light">开始点餐</p>
-  <% end %>
+<div class="weui-panel">
+  <div class="weui-panel__hd">
+    供应商
+  </div>
+  <div class="weui-panel__bd">
+  </div>
+</div>
+
+<div class="weui-panel">
+  <div class="weui-panel__bd">
+    <%= render 'menu' %>
+  </div>
 </div>
