just use providers

--- a/app/views/factory/buy/home/index.html.erb
+++ b/app/views/factory/buy/home/index.html.erb
@@ -3,6 +3,7 @@
     供应商
   </div>
   <div class="weui-panel__bd">
+    <%= render partial: 'organ', collection: current_organ.providers, as: :organ %>
   </div>
 </div>
 
