--- a/app/views/factory/buy/productions/_index/_cart.html.erb
+++ b/app/views/factory/buy/productions/_index/_cart.html.erb
@@ -9,7 +9,7 @@
 <%= button_to({ controller: 'trade/me/trade_items', action: 'destroy', id: trade_item.id }, method: :delete, class: 'mr-1') do %>
   <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
 <% end if trade_item && trade_item.number <= 1 %>
-<%= form_with(theme: nil, scope: 'trade_item', url: { controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input' }) do |f| %>
+<%= form_with theme: nil, scope: 'trade_item', url: { controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input' }, class: 'ml-1' do |f| %>
   <%= f.number_field :number, value: trade_item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
 <% end if trade_item %>
 <%= form_with theme: nil, url: { controller: 'trade/me/trade_items', action: 'create' }, class: 'ml-1 button_to' do |f| %>
