--- a/app/views/factory/productions/_production.html.erb
+++ b/app/views/factory/productions/_production.html.erb
@@ -30,8 +30,8 @@
       </div>
       <% end %>
     </div>
+    <div class="is-flex is-justify-content-flex-end pt-2">
+      <%= render partial: 'cart', locals: { model: model } if current_cart %>
+    </div>
   <% end %>
-  <div class="weui-media-box__ft is-align-items-flex-end pr-2 pb-4">
-    <%= render partial: 'cart', locals: { model: model } if current_cart %>
-  </div>
 </div>
