--- a/app/views/factory/buy/carts/_index/_organ.html.erb
+++ b/app/views/factory/buy/carts/_index/_organ.html.erb
@@ -12,7 +12,7 @@
     </div>
     <p><%= organ.address %></p>
     <p>
-    <% organ.today_produce_plans.each do |produce_plan| %>
+    <% organ.nearest_produce_plans.limit(1).each do |produce_plan| %>
       <%= link_to produce_plan.scene.title, { action: 'list', organ_id: organ.id, produce_plan_id: produce_plan.id }, class: 'button is-link' %>
     <% end %>
     </p>
