--- a/app/views/factory/buy/carts/_list/_cart.html.erb
+++ b/app/views/factory/buy/carts/_list/_cart.html.erb
@@ -20,6 +20,7 @@
       <%= f.hidden_field :good_type, value: model.class_name %>
       <%= f.hidden_field :good_id, value: model.id %>
       <%= f.hidden_field :produce_plan_id, value: params[:produce_plan_id] %>
+      <%= f.hidden_field :agent_id, value: current_member.id %>
       <%= button_tag do %>
         <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
       <% end %>
