--- a/app/views/factory/buy/carts/_list/_index_tbody.html+phone.erb
+++ b/app/views/factory/buy/carts/_list/_index_tbody.html+phone.erb
@@ -11,7 +11,7 @@
   </div>
 </div>
 <div>
-<% model.cart_trade_items.each do |trade_item| %>
+<% @trade_items.select(&->(i){ i.member_id == model.id }).each do |trade_item| %>
   <div>
     <%= form_with theme: nil, model: trade_item, url: { controller: 'trade_items', action: 'toggle', id: trade_item.id }, data: { controller: 'input' }, class: 'is-inline' do |f| %>
       <%= f.check_box :status, value: trade_item.checked? ? 'checked' : 'init', checked: trade_item.checked?, data: { action: 'click->input#form' }, id: nil %>
