--- a/app/views/factory/base/_dialog_produce_on.html.erb
+++ b/app/views/factory/base/_dialog_produce_on.html.erb
@@ -11,7 +11,7 @@
         <span class="has-text-weight-normal has-text-grey is-size-7">
           <span>（</span>
           <span><%= @produce_plan.produce_on %></span>
-          <span><%= @produce_plan.produce_on.to_s(:week) %></span>
+          <span><%= @produce_plan.produce_on.to_fs(:week) %></span>
           <span>）</span>
         </span>
       </div>
@@ -27,7 +27,7 @@
           <span class="has-text-info">前一天</span>
           <span class="has-text-grey is-size-7 pl-1 is-flex is-flex-direction-column is-align-items-center">
             <span><%= @produce_plan.produce_on - 1 %></span>
-            <span><%= (@produce_plan.produce_on - 1).to_s(:week) %></span>
+            <span><%= (@produce_plan.produce_on - 1).to_fs(:week) %></span>
           </span>
         <% end %>
       <% else %>
@@ -44,7 +44,7 @@
           <span class="has-text-info">后一天</span>
           <span class="has-text-grey is-size-7 pl-1 is-flex is-flex-direction-column is-align-items-center">
             <span><%= @produce_plan.produce_on + 1 %></span>
-            <span><%= (@produce_plan.produce_on + 1).to_s(:week) %></span>
+            <span><%= (@produce_plan.produce_on + 1).to_fs(:week) %></span>
           </span>
           <i class="fa-solid fa-chevron-right has-text-info pl-1"></i>
         <% end %>
