--- a/app/views/factory/buy/carts/list.html+phone.erb
+++ b/app/views/factory/buy/carts/list.html+phone.erb
@@ -1,5 +1,11 @@
 <%= render 'breadcrumb' %>
 
+<div class="weui-panel">
+  <div class="weui-panel__bd">
+    <%= render partial: 'production', locals: { model: @production } if @production %>
+  </div>
+</div>
+
 <%= render layout: 'index_table', locals: { cache_key: Org::Member.column_names.hash } do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @members, as: :model %>
 <% end %>
