--- a/app/views/factory/buy/carts/_list/_production.html.erb
+++ b/app/views/factory/buy/carts/_list/_production.html.erb
@@ -1,11 +1,11 @@
-<div class="media">
-  <div class="media-left">
+<div class="weui-media-box weui-media-box_appmsg">
+  <div class="weui-media-box__hd">
     <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, text: true) do %>
       <%= image_tag model.product.logo, class: 'image is-64x64' if model.product.logo.attached? %>
     <% end %>
   </div>
-  <div class="media-content">
-    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, text: true, class: 'weui-media-box__bd is-flex is-flex-direction-column') do %>
+  <div class="weui-media-box__bd">
+    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.product_id }, text: true, class: 'is-flex is-flex-direction-column') do %>
       <h4 class="weui-media-box__title"><%= model.name %></h4>
       <p class="weui-media-box__desc pt-0">
         <%= model.product.description %>
@@ -27,5 +27,8 @@
         <% end %>
       </div>
     <% end %>
+  </div>
+  <div class="weui-media-box__ft">
+    <i class="fa-light fa-plus"></i>
   </div>
 </div>
