--- a/app/views/factory/buy/carts/_list/_add_cart.html.erb
+++ b/app/views/factory/buy/carts/_list/_add_cart.html.erb
@@ -1,11 +1,11 @@
-<div>
-  <%= form_with theme: nil, url: { controller: 'trade/me/trade_items', action: 'create' }, class: 'ml-1 button_to' do |f| %>
-    <%= f.hidden_field :good_type, value: model.class_name %>
-    <%= f.hidden_field :good_id, value: model.id %>
-    <%= f.hidden_field :produce_plan_id, value: params[:produce_plan_id] %>
-    <%= f.hidden_field :agent_id, value: current_member.id %>
-    <%= button_tag do %>
-      <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
-    <% end %>
+<%= form_with theme: nil, url: { controller: 'trade/me/trade_items', action: 'create' }, class: 'ml-1 button_to' do |f| %>
+  <%= f.hidden_field :good_type, value: model.class_name %>
+  <%= f.hidden_field :good_id, value: model.id %>
+  <%= f.hidden_field :produce_plan_id, value: params[:produce_plan_id] %>
+  <%= f.hidden_field :organ_id, value: params[:organ_id] %>
+  <%= f.hidden_field :member_id, value: member.id %>
+  <%= f.hidden_field :agent_id, value: current_member.id %>
+  <%= button_tag do %>
+    <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
   <% end %>
-</div>
+<% end %>
