--- a/app/views/factory/buy/carts/list.html+phone.erb
+++ b/app/views/factory/buy/carts/list.html+phone.erb
@@ -14,6 +14,8 @@
 
 <%= paginate @members %>
 
+<%= render 'index_tfoot' %>
+
 <% if request.variant.any?(:work_wechat) %>
 <div
   data-controller="open-data"
