submit order with trade item ids

--- a/app/views/factory/buy/carts/_list/_trade_item.html.erb
+++ b/app/views/factory/buy/carts/_list/_trade_item.html.erb
@@ -1,6 +1,6 @@
 <div class="is-flex">
   <%= form_with theme: nil, model: trade_item, url: { controller: 'trade_items', action: 'toggle', id: trade_item.id }, data: { controller: 'input' }, class: 'is-inline' do |f| %>
-    <%= f.check_box :status, value: trade_item.checked? ? 'checked' : 'init', checked: trade_item.checked?, data: { action: 'click->input#form' }, id: nil %>
+    <%= f.check_box :status, { checked: trade_item.checked?, data: { action: 'click->input#form' }, id: nil }, trade_item.id %>
   <% end %>
   <span><%= trade_item.good_name %></span>
   <span><%= trade_item.single_price.to_money.format(html_wrap: true).html_safe %></span>
