--- a/app/views/factory/buy/carts/_list/_index_tfoot.html+phone.erb
+++ b/app/views/factory/buy/carts/_list/_index_tfoot.html+phone.erb
@@ -1,7 +1,11 @@
 <div class="weui-panel">
-  <div class="weui-panel__bd">
-    <%= button_to({ controller: 'orders', action: 'create', organ_id: params[:organ_id] }, class: 'button is-success') do %>
-      <i class="fa-light fa-credit-card"></i><%= t('.pay') %>
+  <div class="weui-panel__bd" data-controller="check" data-check-name-value="trade_item[status]">
+    <%= form_with theme: nil, url: { controller: 'orders', action: 'create', organ_id: params[:organ_id] }, class: 'button is-success button_to' do |f| %>
+      <%= f.hidden_field :ids, data: { check_target: 'ids' } %>
+      <%= button_tag data: { action: 'check#doSubmit' } do %>
+        <i class="fa-light fa-credit-card"></i>
+        <span><%= t('.pay') %></span>
+      <% end %>
     <% end %>
   </div>
 </div>
