--- a/app/views/factory/admin/produce_plans/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/produce_plans/_index/_index_thead.html.erb
@@ -1,3 +1,7 @@
 <th><%= Factory::ProducePlan.human_attribute_name(:produce_on) %></th>
+<th>
+  <p class="has-text-grey"><%= Factory::ProducePlan.human_attribute_name(:book_start_at) %></p>
+  <p><%= Factory::ProducePlan.human_attribute_name(:book_finish_at) %></p>
+</th>
 <td><%= Factory::ProducePlan.human_attribute_name(:created_at) %></td>
 <th><%= Factory::ProducePlan.human_attribute_name(:state) %></th>
