--- a/app/views/factory/buy/carts/list.html+phone.erb
+++ b/app/views/factory/buy/carts/list.html+phone.erb
@@ -1,6 +1,4 @@
-<% if params[:produce_plan_id] %>
-  <%= render 'produce_on_bar' %>
-<% end %>
+<%= render 'produce_on_bar' %>
 
 <div class="weui-panel">
   <div class="weui-panel__bd">
@@ -25,4 +23,4 @@
 </div>
 <% end %>
 
-<%= render 'taxon' if @produce_plan %>
+<%= render 'taxon' %>
