--- a/app/views/factory/buy/productions/index.html+phone.erb
+++ b/app/views/factory/buy/productions/index.html+phone.erb
@@ -1,4 +1,4 @@
-<%= render 'breadcrumb' %>
+<%= render 'produce_on_bar' %>
 
 <div class="box is-radiusless">
   <i class="fa-light fa-location-dot"></i>
@@ -23,4 +23,4 @@
     <%= render 'paginator' %>
   </div>
 </div>
-<%= render 'taxon' if @produce_plan %>
+<%= render 'taxon' %>
