--- a/app/views/factory/base/_dialog_produce_on.html.erb
+++ b/app/views/factory/base/_dialog_produce_on.html.erb
@@ -7,11 +7,11 @@
     </div>
     <div class="weui-half-screen-dialog__hd__main">
       <div class="weui-half-screen-dialog__title">
-        <span><%= @produce_plan.scene.title %></span>
+        <span><%= @scene.title %></span>
         <span class="has-text-weight-normal has-text-grey is-size-7">
           <span>（</span>
-          <span><%= @produce_plan.produce_on %></span>
-          <span><%= @produce_plan.produce_on.to_fs(:week) %></span>
+          <span><%= params[:produce_on] %></span>
+          <span><%= params[:produce_on].to_date.to_fs(:week) %></span>
           <span>）</span>
         </span>
       </div>
@@ -21,13 +21,13 @@
   <div class="weui-half-screen-dialog__bd">
     <div class="columns as-border is-flex m-0 p-4">
       <div class="column is-half is-align-self-center">
-      <% if @produce_plan.prev_plan %>
-        <%= link_to({ action: 'index', produce_plan_id: @produce_plan.prev_plan.id }, class: 'is-flex is-align-items-center') do %>
+      <% if @prev_plan %>
+        <%= link_to({ action: 'list', produce_on: @prev_plan.produce_on, scene_id: params[:scene_id] }, class: 'is-flex is-align-items-center') do %>
           <i class="fa-solid fa-chevron-left has-text-info"></i>
           <span class="has-text-info">前一天</span>
           <span class="has-text-grey is-size-7 pl-1 is-flex is-flex-direction-column is-align-items-center">
-            <span><%= @produce_plan.produce_on - 1 %></span>
-            <span><%= (@produce_plan.produce_on - 1).to_fs(:week) %></span>
+            <span><%= @prev_plan.produce_on %></span>
+            <span><%= @prev_plan.produce_on.to_fs(:week) %></span>
           </span>
         <% end %>
       <% else %>
@@ -39,12 +39,12 @@
       <% end %>
       </div>
       <div class="column is-half is-align-self-center">
-      <% if @produce_plan.next_plan %>
-        <%= link_to({ action: 'index', produce_plan_id: @produce_plan.next_plan.id }, class: 'is-flex is-align-items-center') do %>
+      <% if @next_plan %>
+        <%= link_to({ action: 'list', produce_on: @next_plan.produce_on, scene_id: params[:scene_id] }, class: 'is-flex is-align-items-center') do %>
           <span class="has-text-info">后一天</span>
           <span class="has-text-grey is-size-7 pl-1 is-flex is-flex-direction-column is-align-items-center">
-            <span><%= @produce_plan.produce_on + 1 %></span>
-            <span><%= (@produce_plan.produce_on + 1).to_fs(:week) %></span>
+            <span><%= @next_plan.produce_on %></span>
+            <span><%= @next_plan.produce_on.to_fs(:week) %></span>
           </span>
           <i class="fa-solid fa-chevron-right has-text-info pl-1"></i>
         <% end %>
