--- a/app/views/factory/base/_produce_plan_options.html.erb
+++ b/app/views/factory/base/_produce_plan_options.html.erb
@@ -1,15 +1,15 @@
-<%= link_to({ controller: 'productions', produce_plan_id: model.id }, class: 'column is-half-mobile has-text-grey') do %>
-  <div class="weui-grid__icon"><%= image_tag model.scene.logo if model.scene.logo.attached? %></div>
-  <p class="weui-grid__label <%= @produce_plan.scene_id == model.scene_id ? 'has-text-success' : 'has-text-grey' %>"><%= model.scene.title %></p>
+<%= link_to({ controller: 'productions', produce_on: params[:produce_on], scene_id: scene.id }, class: 'column is-half-mobile has-text-grey') do %>
+  <div class="weui-grid__icon"><%= image_tag scene.logo if scene.logo.attached? %></div>
+  <p class="weui-grid__label <%= scene.id == params[:scene_id] ? 'has-text-success' : 'has-text-grey' %>"><%= scene.title %></p>
   <p class="is-size-7">
     <span>预定截止：</span>
-    <time><%= extra_distance_date(model.produce_on) %></time>
-    <time><%= model.scene.book_finish_at.to_s(:time) %></time>
+    <time><%= extra_distance_date(params[:produce_on]) %></time>
+    <time><%= scene.book_finish_at.to_s(:time) %></time>
   </p>
   <p class="is-size-7">
     <span>配送时间：</span>
-    <time><%= model.scene.deliver_start_at.to_s(:time) %></time>
+    <time><%= scene.deliver_start_at.to_s(:time) %></time>
     <span>~</span>
-    <time><%= model.scene.deliver_finish_at.to_s(:time) %></time>
+    <time><%= scene.deliver_finish_at.to_s(:time) %></time>
   </p>
 <% end %>
