--- a/app/views/factory/buy/carts/_list/_index_tfoot.html+phone.erb
+++ b/app/views/factory/buy/carts/_list/_index_tfoot.html+phone.erb
@@ -1,8 +1,8 @@
 <div class="weui-panel">
   <div class="weui-panel__bd" data-controller="check" data-check-name-value="trade_item[status]">
-    <%= form_with theme: nil, url: { controller: 'orders', action: 'create', organ_id: params[:organ_id] }, class: 'button is-success button_to' do |f| %>
+    <%= form_with theme: nil, url: { controller: 'orders', action: 'create', organ_id: params[:organ_id] }, class: 'button_to' do |f| %>
       <%= f.hidden_field :ids, data: { check_target: 'ids' } %>
-      <%= button_tag data: { action: 'check#doSubmit' } do %>
+      <%= button_tag data: { action: 'check#doSubmit' }, class: 'weui-btn_cell weui-btn_cell-warn py-4' do %>
         <i class="fa-light fa-credit-card"></i>
         <span><%= t('.pay') %></span>
       <% end %>
