--- a/app/views/factory/buy/carts/_list/_production.html.erb
+++ b/app/views/factory/buy/carts/_list/_production.html.erb
@@ -29,7 +29,7 @@
     <% end %>
   </div>
   <div class="weui-media-box__ft">
-    <%= button_to({ controller: 'productions', action: 'list', **params.permit(:produce_plan_id) }, class: 'button is-borderless') do %>
+    <%= button_to({ controller: 'productions', action: 'list', **params.permit(:produce_on, :scene_id) }, class: 'button is-borderless') do %>
       <i class="fa-light fa-repeat fa-lg"></i>
     <% end %>
   </div>
