--- a/app/views/factory/buy/carts/list.html+phone.erb
+++ b/app/views/factory/buy/carts/list.html+phone.erb
@@ -17,7 +17,7 @@
 <% if request.variant.any?(:work_wechat) %>
 <div
   data-controller="open-data"
-  data-open-data-options-value="<%= (current_wechat_app&.agent_config(request.original_url) || {}).to_json %>"
+  data-open-data-options-value="<%= (current_js_app&.agent_config(request.original_url) || {}).to_json %>"
   data-open-data-apis-value="<%= ['openUserProfile'].to_json %>"
   data-open-data-debug-value="false">
 </div>
