--- a/app/views/factory/admin/produce_plans/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_index/_index_tbody.html.erb
@@ -1,7 +1,7 @@
 <td><%= model.produce_on %></td>
 <td>
-  <p class="has-text-grey"><time data-controller="time"><%= model.book_start_at.to_formatted_s(:iso8601) %></time></p>
-  <p><time data-controller="time"><%= model.book_finish_at.to_formatted_s(:iso8601) %></time></p>
+  <p class="has-text-grey"><time data-controller="time"><%= model.book_start_at.to_fs(:iso8601) %></time></p>
+  <p><time data-controller="time"><%= model.book_finish_at.to_fs(:iso8601) %></time></p>
 </td>
-<td><time data-controller="time"><%= model.created_at.to_formatted_s(:iso8601) %></time></td>
+<td><time data-controller="time"><%= model.created_at.to_fs(:iso8601) %></time></td>
 <td><%= model.state %></td>
