--- a/app/views/factory/admin/production_plans/_index/_index_tbody.html+phone.erb
+++ b/app/views/factory/admin/production_plans/_index/_index_tbody.html+phone.erb
@@ -1,7 +1,7 @@
 <p class="weui-media-box__desc"><%= model.scene&.title %></p>
 <p class="weui-media-box__desc"><%= model.produce_on %></p>
-<p class="weui-media-box__desc"><time data-controller="time"><%= model.start_at.to_formatted_s(:iso8601) if model.start_at %></time></p>
-<p class="weui-media-box__desc"><time data-controller="time"><%= model.finish_at.to_formatted_s(:iso8601) if model.finish_at %></time></p>
+<p class="weui-media-box__desc"><time data-controller="time"><%= model.start_at.to_fs(:iso8601) if model.start_at %></time></p>
+<p class="weui-media-box__desc"><time data-controller="time"><%= model.finish_at.to_fs(:iso8601) if model.finish_at %></time></p>
 <p class="weui-media-box__desc"><%= model.state_i18n %></p>
 <p class="weui-media-box__desc"><%= model.planned_count %></p>
 <p class="weui-media-box__desc"><%= link_to model.production_items_count, { controller: 'production_items', production_plan_id: model.id } %></p>
