--- a/app/views/factory/product_plans/index.html+phone.erb
+++ b/app/views/factory/product_plans/index.html+phone.erb
@@ -10,9 +10,9 @@
         </div>
         <div class="weui-media-box__bd">
           <h4 class="weui-media-box__title">
-            <time data-controller="time"><%= product_plan.start_at.to_formatted_s(:iso8601) %></time>
+            <time data-controller="time"><%= product_plan.start_at.to_fs(:iso8601) %></time>
             <span>-</span>
-            <time data-controller="time"><%= product_plan.finish_at.to_formatted_s(:iso8601) %></time>
+            <time data-controller="time"><%= product_plan.finish_at.to_fs(:iso8601) %></time>
           </h4>
           <p class="weui-media-box__desc">
             <%= product_plan.state_i18n %>
