--- a/app/views/factory/productions/_production.html.erb
+++ b/app/views/factory/productions/_production.html.erb
@@ -2,8 +2,10 @@
   <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, class: 'weui-media-box__hd') do %>
     <%= image_tag model.product.logo, class: 'weui-media-box__thumb' if model.product.logo.attached? %>
   <% end %>
-  <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, class: 'weui-media-box__bd is-flex is-flex-direction-column') do %>
-    <h4 class="weui-media-box__title"><%= model.name %></h4>
+  <div class="weui-media-box__bd is-flex is-flex-direction-column">
+    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, class: 'weui-media-box__title') do %>
+      <%= model.name %>
+    <% end %>
     <p class="weui-media-box__desc pt-0">
       <%= model.product.description %>
     </p>
@@ -33,5 +35,5 @@
     <div class="is-flex is-justify-content-flex-end pt-2">
       <%= render partial: 'cart', locals: { model: model } if current_cart %>
     </div>
-  <% end %>
+  </div>
 </div>
