--- a/app/views/factory/productions/expired.html.erb
+++ b/app/views/factory/productions/expired.html.erb
@@ -1,7 +1,9 @@
-<%= render 'breadcrumb' %>
+<% if params[:produce_on] && params[:scene_id] %>
+  <%= render 'produce_on_bar' %>
+<% end %>
 
-<div>
-  <span>已经超过下单时间了，请点</span>
+<div class="has-text-centered">
+  <span>已经超过下单时间了，请切换其他时间段</span>
 </div>
 
 <%= render 'taxon' if @produce_plan %>
